--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
-        "vercel-build": "prisma migrate deploy && next build"
+        "postinstall": "prisma generate",
+        "vercel-build": "prisma generate && prisma migrate deploy && next build"
     },
     "dependencies": {
+        "@neondatabase/serverless": "^1.0.1",
         "@prisma/client": "^6.13.0",
         "@tailwindcss/postcss": "^4.1.11",
         "date-fns": "^4.1.0",
