--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
         "@prisma/client": "^6.13.0",
         "@tailwindcss/postcss": "^4.1.11",
         "date-fns": "^4.1.0",
+        "lucide-react": "^0.539.0",
         "next": "15.4.6",
         "next-intl": "^3.16.0",
         "openai": "^5.12.1",
         "prisma": "^6.13.0",
         "react": "18.3.1",
         "react-dom": "18.3.1",
+        "sonner": "^2.0.7",
         "zod": "^3.25.76"
     },
     "devDependencies": {
