--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
         "vercel-build": "prisma generate && prisma migrate deploy && next build"
     },
     "dependencies": {
+        "@auth/prisma-adapter": "^2.10.0",
         "@neondatabase/serverless": "^1.0.1",
         "@prisma/client": "^6.13.0",
         "@tailwindcss/postcss": "^4.1.11",
         "date-fns": "^4.1.0",
         "lucide-react": "^0.539.0",
         "next": "15.4.6",
+        "next-auth": "^4.24.11",
         "next-intl": "^3.16.0",
         "openai": "^5.12.1",
         "prisma": "^6.13.0",
