--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "@neondatabase/serverless": "^1.0.1",
         "@prisma/client": "^6.13.0",
         "@tailwindcss/postcss": "^4.1.11",
+        "@tanstack/react-query": "^5.85.5",
+        "@tanstack/react-query-devtools": "^5.85.5",
         "date-fns": "^4.1.0",
         "lucide-react": "^0.539.0",
         "next": "15.4.6",
