--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@tanstack/react-query": "^5.85.5",
         "@tanstack/react-query-devtools": "^5.85.5",
         "date-fns": "^4.1.0",
+        "date-fns-tz": "^3.2.0",
         "lucide-react": "^0.539.0",
         "next": "15.4.6",
         "next-auth": "^4.24.11",
